SERVER-61592 Correctness fix for time-series query with millisecond granularity

Prior to this fix a time-series collection query on time would truncate the
requested time to second granularity and could miss metrics that fall within
the requested time and the truncated value

(cherry picked from commit 0073acf24096185e67c87318919354b4745cd538)